--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "postinstall": "patch-package",
     "preview": "vite preview",
     "lint": "eslint src",
     "format": "prettier --write . && yarn lint --fix",
@@ -17,15 +18,17 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@agoric/casting": "^0.3.3-dev-f5341af.0",
     "@agoric/ertp": "^0.15.4-dev-f5341af.0",
+    "@agoric/rpc": "^0.0.2-dev-2c6fbc5.0",
+    "@agoric/smart-wallet": "^0.5.3",
     "@agoric/ui-components": "^0.3.4-dev-f5341af.0",
-    "@agoric/web-components": "^0.5.1-dev-bdb08a7.0",
+    "@agoric/web-components": "^0.6.4-dev-2c6fbc5.0",
     "@agoric/zoe": "^0.25.4-dev-f5341af.0",
     "@endo/eventual-send": "^0.16.0",
     "@endo/init": "^0.5.53",
     "@endo/lockdown": "^0.1.25",
     "@headlessui/react": "^1.6.6",
+    "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -41,7 +44,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "framer-motion": "^7.2.1",
     "jotai": "^1.8.0",
+    "lodash-es": "4.17.21",
+    "patch-package": "^7.0.0",
     "postcss": "^8.4.16",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.7.1",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.2.0",
