--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "react-icons": "^4.4.0",
-    "react-loader-spinner": "^5.2.0",
+    "react-loader-spinner": "~5.4.5",
     "react-toastify": "^9.0.8",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
