--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint src",
     "format": "prettier --write . && yarn lint --fix",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "test:e2e": "EXTENSION=keplr synpress run --configFile=tests/e2e/synpress.config.cjs"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "@agoric/ertp": "^0.16.2",
     "@agoric/rpc": "^0.9.0",
     "@agoric/smart-wallet": "^0.5.3",
+    "@agoric/synpress": "^3.7.2-beta.11",
     "@agoric/ui-components": "^0.9.0",
     "@agoric/web-components": "^0.15.0",
     "@agoric/zoe": "^0.26.2",
