--- a/.github/workflows/e2e_tests.yml
+++ b/.github/workflows/e2e_tests.yml
@@ -2,6 +2,7 @@ name: E2E tests
 
 on:
   push:
+    branches: [main]
   pull_request:
     branches: [main]
 
@@ -12,7 +13,6 @@ concurrency:
 
 jobs:
   e2e:
-    if: github.ref == 'refs/heads/main' || github.event_name == 'pull_request'
     runs-on: ubuntu-latest
 
     steps:
