fixup! refactor: moved docker-compose and nginx.conf
fix: fix path for artifacts

--- a/.github/workflows/e2e_tests.yml
+++ b/.github/workflows/e2e_tests.yml
@@ -59,7 +59,7 @@ jobs:
         with:
           name: e2e-artifacts
           path: |
-            docker/videos
-            docker/videos-ci
-            docker/screenshots
+            tests/e2e/docker/videos
+            tests/e2e/docker/videos-ci
+            tests/e2e/docker/screenshots
         continue-on-error: true
