--- a/.github/workflows/e2e_tests.yml
+++ b/.github/workflows/e2e_tests.yml
@@ -5,6 +5,8 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  schedule:
+    - cron: '0 0 * * *'
 
 concurrency:
   group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label ||
@@ -35,7 +37,7 @@ jobs:
 
       - name: Run e2e tests
         run: |
-          docker-compose -f tests/e2e/docker-compose.yml --profile synpress up --build --exit-code-from synpress
+          docker-compose -f tests/e2e/docker-compose.yml --profile ${{ github.event_name == 'schedule' && 'daily-tests' || 'synpress' }} up --build --exit-code-from synpress
         env:
           COMPOSE_DOCKER_CLI_BUILD: 1
           DOCKER_BUILDKIT: 1
@@ -52,6 +54,7 @@ jobs:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           COMMIT_INFO_MESSAGE: ${{ github.event.pull_request.title }}
           COMMIT_INFO_SHA: ${{ github.event.pull_request.head.sha }}
+          CYPRESS_AGORIC_NET: "${{ github.event_name == 'schedule' && 'emerynet' || 'local' }}"
 
       - name: Archive e2e artifacts
         uses: actions/upload-artifact@v3
